@@ -456,6 +456,9 @@ Trunk -  Unreleased
     HIVE-1350. hive.query.id is not unique
     (Namit Jain via Ning Zhang)
 
+    HIVE-1335 DataNucleus should use connection pooling
+    (Edward Capriolo via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
